# nanoGPT

./: .gitignore  README.md  model.py  pyproject.toml  train.py
data/shakespeare_char/: README.md  prepare.py
