[tool.poetry]
name = "nanogpt"
version = "0.1.0"
description = "\"The simplest, fastest repository for training/finetuning medium-sized GPTs.\""
authors = ["Lifan Sun <lifansun1412@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
