[tool.poetry]
name = "nanogpt"
version = "0.1.0"
description = "\"The simplest, fastest repository for training/finetuning medium-sized GPTs.\""
authors = ["Lifan Sun <lifansun1412@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.0"
numpy = "^2.0.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
